--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "arial", sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -15,7 +17,7 @@ body {
     color: #e63803;
 }
 .topBar {
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     left: 0;
     height: 60px;
@@ -43,7 +45,7 @@ body {
 .banner {
     height: 200px;
     width: auto;
-    margin-top: 60px;
+    /* margin-top: 60px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,8 +86,10 @@ body {
 .container .contain-box .box p {
     display: inline-block;
     margin-top: 15px;
+    padding: 10px 20px;
     text-align: center;
-    font-size: 15px;
+    font-size: 12px;
+    font-weight: 300;
 }
 .prise {
     font-size: 17px;
@@ -121,4 +125,23 @@ body {
     font-size: 20px;
 }
 
-
+/*footrt*/
+.footer {
+    height: 200px;
+    width: auto;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #2C3E50;
+}
+.footer_text {
+    font-size: 17px;
+    line-height: 10px;
+    font-weight: 50;
+    color: #F2F3F4;
+}
+.superskill {
+    color: #e63803;
+    font-weight: 500;
+}
